# armorapi

./: README.md  armorapi.py  setup.cfg  tests.py
src/armorapi/: __init__.py
src/armorapi.egg-info/: PKG-INFO
tests/integration_tests/: tests.py
