[metadata]
name = armorapi
version = 0.0.1
author = Robin Fordham
author_email = gingebot@gmail.com
description = module for working with the armorapi
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gingebot/armorapi
project_urls =
    Bug Tracker = https://github.com/gingebot/armorapi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache 2.0 license
    Operating System :: OS Independent

[options]
install_requires = 
    requests
    bs4
package_dir =
    = src
packages = find:
python_requires = >=3.6
[options.packages.find]
where = src
